# ======================================================================================================================
# Common TM-TC library: eclairs-core-tmtc
# ----------------------------------------------------------------------------------------------------------------------

nobase_include_HEADERS += \
	%reldir%/fields/Time.h \
	%reldir%/Apid.h \
	%reldir%/HeaderTc.h \
	%reldir%/HeaderTmSb.h \
	%reldir%/PktCcsds.h \
	%reldir%/PktCcsdsTc.h \
	%reldir%/PktCcsdsTmSb.h \
	%reldir%/Types.h
